infrastructure/kubernetes/manifests/renderred/environments-staging/kubescape/ValidatingWebhookConfiguration/kubescape-admission-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app: operator
    app.kubernetes.io/component: operator
    app.kubernetes.io/instance: kubescape
    app.kubernetes.io/managed-by: Helmraiser
    app.kubernetes.io/name: kubescape-operator
    app.kubernetes.io/part-of: kubescape
    app.kubernetes.io/version: 1.40.2
    app.tanka.grafana.com: kubescape
    helm.sh/chart: kubescape-operator-1.40.2
    kubescape.io/ignore: "true"
    tier: ks-control-plane
  name: kubescape-admission-webhook
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJRENDQWdpZ0F3SUJBZ0lSQU16WklVQ1VKM0k2bWdOK1V3cndkcTB3RFFZSktvWklodmNOQVFFTEJRQXcKR2pFWU1CWUdBMVVFQXd3UEtpNXJkV0psYzJOaGNHVXVjM1pqTUI0WERUSTJNRGN6TURJek16SXlNbG9YRFRNMgpNRGN5TnpJek16SXlNbG93R2pFWU1CWUdBMVVFQXd3UEtpNXJkV0psYzJOaGNHVXVjM1pqTUlJQklqQU5CZ2txCmhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBdDJjZXpxdzBLeXp4ZFg2bTJET0RmU2ZjZkMyNUtyd3MKcm93MXIyZEdBbHIwQThLM0ExSDFPNXY2Mys2Q2lOQVE4VXljWGVnQzQ0dUdmUEVLc2pBeDJYVU5lcEFoOUdregpzcGxCa3VsUjNT [...]
      service:
        name: kubescape-admission-webhook
        namespace: kubescape
        path: /validate
        port: 443
    failurePolicy: Ignore
    name: validation.kubescape.admission
    rules:
      - apiGroups:
          - "*"
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
          - DELETE
          - CONNECT
        resources:
          - pods
          - pods/exec
          - pods/portforward
          - pods/attach
          - clusterrolebindings
          - rolebindings
        scope: "*"
    sideEffects: None
